Fixing positioning and slider issues.
git-svn-id: http://developer.longtailvideo.com/svn/trunk@955 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/index.html
+++ b/html5/test/index.html
@@ -240,7 +240,7 @@
 		$('#preview').css('height',vrs['height']);
 		var ply = settings.players[$('#players').val()];
 		$('#preview').html('<video id="container" src="'+vrs['file']+'" width="'+vrs['width']+'" height="'+vrs['height']+'" />');
-		$('#container').jwplayer(variables);
+		$('#container').jwplayer(vrs);
 		var lnk = 'http://developer.longtailvideo.com/player/trunk/html5/test/';
 		$("#permalink").val(lnk+'?'+$.param(variables));
 	};
