--- a/html5/index.html
+++ b/html5/index.html
@@ -25,8 +25,8 @@
 	height="270"
 	id="player1"
 	class="jwplayer"
-	poster="http://localhost/html5/test/files/bunny.jpg"
-	src="http://localhost/html5/test/files/bunny.mp4"
+	poster="./test/../test/files/bunny.jpg"
+	src="./test/files/bunny.mp4"
 	width="480"
 >
 </video>
@@ -35,8 +35,8 @@
 <video
 	height="270"
 	id="player2"
-	poster="http://localhost/html5/test/files/bunny.jpg"
-	src="http://localhost/html5/test/files/bunny.mp4"
+	poster="test/files/bunny.jpg"
+	src="test/files/bunny.mp4"
 	width="480"
 >
 </video>
@@ -53,9 +53,9 @@
 	class="jwplayer"
 	width="480"
 	height="270"
-	poster="http://localhost/html5/test/files/bunny.jpg"
+	poster="test/files/bunny.jpg"
 >
-<source src='http://localhost/html5/test/files/bunny.ogv' type='video/ogg; codecs="theora, vorbis"'>
+<source src='test/files/bunny.ogv' type='video/ogg; codecs="theora, vorbis"'>
 </video>
 
 
@@ -65,10 +65,10 @@
 	class="jwplayer"
 	width="480"
 	height="270"
-	poster="http://localhost/html5/test/files/bunny.jpg"
+	poster="test/files/bunny.jpg"
 >
-<source src='http://localhost/html5/test/files/bunny.ogv' type='video/ogg; codecs="theora, vorbis"'>
-<source src='http://localhost/html5/test/files/bunny.mp4' type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+<source src='test/files/bunny.ogv' type='video/ogg; codecs="theora, vorbis"'>
+<source src='test/files/bunny.mp4' type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 </video>
 
 
@@ -78,10 +78,10 @@
 	class="jwplayer"
 	width="480"
 	height="270"
-	poster="http://localhost/html5/test/files/bunny.jpg"
+	poster="test/files/bunny.jpg"
 >
-<source src='http://localhost/html5/test/files/bunny.ogv' type='video/ogg; codecs="theora, vorbis"'>
-<source src='http://localhost/html5/test/files/bunny.mp4' type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+<source src='test/files/bunny.ogv' type='video/ogg; codecs="theora, vorbis"'>
+<source src='test/files/bunny.mp4' type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 </video>
 
 <!--<a id="play">play</a>
