- Partial autostart support - http://developer.longtailvideo.com/trac/ticket/850 - Repeat works - http://developer.longtailvideo.com/trac/ticket/851 - Safari final state correct - http://developer.longtailvideo.com/trac/ticket/864 - Fixed controlbar fullscreen click / volume issue (http://developer.longtailvideo.com/trac/ticket/877) - Display component (http://developer.longtailvideo.com/trac/ticket/858) - Listeners in private API (http://developer.longtailvideo.com/trac/ticket/870) - increase the height of container div for controlbar = bottom (http://developer.longtailvideo.com/trac/ticket/878) - respect controlbar position (http://developer.longtailvideo.com/trac/ticket/856) - VideoMedia Provider now supports buffering state / events - Setup script - iPhone support
git-svn-id: http://developer.longtailvideo.com/svn/trunk@975 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -24,12 +24,19 @@
 <video
 	height="270"
 	id="player1"
-	class="jwplayer"
-	poster="./test/../test/files/bunny.jpg"
-	src="./test/files/bunny.mp4"
+	poster="http://developer.longtailvideo.com/player/trunk/html5/test/files/bunny.jpg"
 	width="480"
 >
+	<source src='test/files/bunny.mp4''>
+
 </video>
+
+<script type="text/javascript">
+	$('#player1').jwplayer({
+		skin:'assets/five/five.xml',
+		repeat: 'list'
+	});
+</script>
 
 <h4>Test 2: manual embed</h4>
 <video
@@ -41,12 +48,12 @@
 >
 </video>
 
+
 <script type="text/javascript">
 	$('#player2').jwplayer({
 		skin:'assets/five/five.xml'
 	});
 </script>
-
 <h4>Test 3: Theora</h4>
 <video
 	id="player3"
