- Adding default skin (non-working) - Modified logging for debugger
git-svn-id: http://developer.longtailvideo.com/svn/trunk@982 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -34,7 +34,8 @@
 <script type="text/javascript">
 	$('#player1').jwplayer({
 		skin:'assets/five/five.xml',
-		repeat: 'list'
+		repeat: 'list',
+		debug: 'CONSOLE'
 	});
 </script>
 
