- Default Skin Working
git-svn-id: http://developer.longtailvideo.com/svn/trunk@988 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -24,7 +24,7 @@
 <video
 	height="270"
 	id="player1"
-	poster="http://developer.longtailvideo.com/player/trunk/html5/test/files/bunny.jpg"
+	poster="test/files/bunny.jpg"
 	width="480"
 >
 	<source src='test/files/bunny.mp4''>
@@ -33,7 +33,7 @@
 
 <script type="text/javascript">
 	$('#player1').jwplayer({
-		skin:'assets/five/five.xml',
+		skin:'assets/five/fve.xml',
 		repeat: 'list',
 		debug: 'CONSOLE'
 	});
