added support site examples, cheated with a little ICS skin update, remove some Flash supported extensions and added examples to testing tool. All HTMl5 player related
git-svn-id: http://developer.longtailvideo.com/svn/trunk@994 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/index.html
+++ b/html5/test/index.html
@@ -239,7 +239,12 @@
 		variables['skin'] = settings.skins[variables['skin']];
 		var lnk = 'http://developer.longtailvideo.com/player/trunk/html5/test/';
 		$("#permalink").val(lnk+'?'+$.param(variables));
-		$('#container').attr('src',variables['file']);
+		if(variables['file']) {
+			$('#container').attr('src',variables['file']);
+		}
+		if(variables['image']) { 
+			$('#container').attr('poster',variables['image']);
+		}
 		for (itm in variables) {
 			variables[itm] = serialize(variables[itm]);
 		}
