- Background now uses screencolor (http://developer.longtailvideo.com/trac/ticket/855) - Parser handles no poster with ease (http://developer.longtailvideo.com/trac/ticket/891) - API Issued fixed (http://developer.longtailvideo.com/trac/ticket/882)  - MediaInfo now updates  - Mute = false now sets state rather than toggling for Flash  - Stop fixed  - Buffer event cleaned up  - Time + volume are now rounded - Options working (http://developer.longtailvideo.com/trac/ticket/897): duration, screencolor, debug, repeat - Thumbnail now disappears with Flash failover (http://developer.longtailvideo.com/trac/ticket/898) - iPod / iPad support repaired (added poster to display componenent) - Fixed repeat, seek, and play/pause issues in Chrome + Firefox (caused by repeat mechanism)
git-svn-id: http://developer.longtailvideo.com/svn/trunk@995 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/index.html
+++ b/html5/test/index.html
@@ -298,9 +298,9 @@
 		var typ = $('#sendevent').val();
 		var pr1 = serialize($('#sendeventdata1').val());
 		var pr2 = serialize($('#sendeventdata2').val());
-		if(pr2) {
+		if((pr2 !== undefined) && (pr2 !== null)) {
 			$.jwplayer()[typ](pr1,pr2);
-		} else if (pr1) { 
+		} else if ((pr1 !== undefined) && (pr1 !== null)) { 
 			$.jwplayer()[typ](pr1);
 		} else { 
 			$.jwplayer()[typ]();
