Fixing alerting to console for Ethan
git-svn-id: http://developer.longtailvideo.com/svn/trunk@996 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/index.html
+++ b/html5/test/index.html
@@ -325,7 +325,11 @@
 				txt += itm+': '+obj[itm]+'\n';
 			}
 		}
-		console.log(txt);
+		try {
+			console.log(txt);			
+		} catch(err) {
+			alert(txt);
+		}
 	};
 
 
