--- a/html5/test/examples/single_ogg.html
+++ b/html5/test/examples/single_ogg.html
@@ -1,19 +1,18 @@
 <html>
 <body>
-<h1>MP4 plus OGG video</h1>
+<h1>Single OGG video</h1>
 
 
 
 
+<p>This is the basic setup for a video that only plays on Firefox / Opera. On other browsers, it'll fallback to a download link. A poster image is included.</p>
 
-<p>This is the basic setup for a video that plays natively on most browsers. Only IE will fallback to Flash.</p>
-
-<p><video height="270" id="player" poster="/jw/upload/bunny.jpg" width="480"><source src="/jw/upload/bunny.mp4" type="video/mp4" /><source src="/jw/upload/bunny.ogv" type="video/ogg" /></video></p>
+<p><video height="270" id="player" poster="/jw/upload/bunny.jpg" width="480" src="/jw/upload/bunny.ogv"></video></p>
 
 <script type="text/javascript" src="/jw/js/jquery.jwplayer.js"></script>
 <script type="text/javascript">
   $('#player').jwplayer({flashplayer:'/files/player.swf',skin:'/files/skins/five/five.xml'});
-</script></p>
+</script>
 
 <h3>HTML code</h3>
 <p> Here is the code for this setup. Make sure to change all links to the scripts, player, image and video. They must refer to the correct files on your server.</p>
@@ -24,17 +23,16 @@
 
 
 <p>Second, place this code where you want the video to appear:</p>
-<pre>&lt;video height="270" id="player" poster="/files/bunny.jpg" width="480"&gt;
-  &lt;source src="/files/bunny.mp4" type="video/mp4"&gt;
-  &lt;source src="/files/bunny.ogv" type="video/ogg"&gt;
-&lt;/video&gt;
+<pre>&lt;video height="270" id="player" poster="/files/bunny.jpg"
+  src="/files/bunny.ogv" width="480"&gt;
 
 &lt;script type="text/javascript"&gt;
   $('#player').jwplayer({
-    flashplayer:'/files/player.swf',
     skin:'/files/skins/five/five.xml'
   });
 &lt;/script&gt;</pre>
+
+<p>Note this example does not define a <i>flashplayer</i> fallback, since OGG cannot be played in Flash.</p> 
 
 
 
