--- a/html5/test/examples/multiple_customs.html
+++ b/html5/test/examples/multiple_customs.html
@@ -1,34 +1,34 @@
 <html>
 <body>
 
-
-
 <h1>Multiple custom players.</h1>
 
-<p>Multiple players on one page. Different videos ánd different styles.</p>
+
+
+
+
+
+<p>Multiple players on one page. Different videos and different options.</p>
 
 <h3>Player 1:</h3>
 <script type="text/javascript" src="/jw/js/jquery.jwplayer.js"></script>
-<video height="270" id="player1" poster="/jw/upload/bunny.jpg" src="/jw/upload/bunny.mp4" width="480">
-	<a href="/jw/upload/bunny.mp4">Click here</a> to download this video.
-</video>
+<p><video height="270" id="player1" poster="/jw/upload/bunny.jpg" src="/jw/upload/bunny.mp4" width="480"></video></p>
 <script type="text/javascript">
 	$('#player1').jwplayer({
 		autostart:true,
 		flashplayer:'/files/player.swf',
 		mute:true,
-		skin:'/files/skins/icecreamsneaka/icecreamsneaka.xml'
+		skin:'/files/skins/five/five.xml'
 	});
 </script>
 
 
 <h3>Player 2:</h3>
-<video height="270" id="player2" poster="/jw/upload/corrie.jpg" src="/jw/upload/corrie.mp4" width="480">
-	<a href="/jw/upload/corrie.mp4">Click here</a> to download this video.
-</video>
+<p><video height="270" id="player2" poster="/jw/upload/corrie.jpg" src="/jw/upload/corrie.mp4" width="480"></video></p>
 <script type="text/javascript">
 	$('#player2').jwplayer({
 		duration:45,
+		screencolor:'00bee0',
 		skin:'/files/skins/stormtrooper/stormtrooper.xml'
 	});
 </script>
@@ -44,42 +44,29 @@
 &lt;script type="text/javascript" src="/scripts/jquery.jwplayer.js"&gt;&lt;/script&gt;</pre>
 
 <p>Second, place this code where you want the first video to appear:</p>
-<pre>&lt;video 
-  height="270" 
-  id="player1"
-  poster="/files/bunny.jpg"
-  src="/files/bunny.mp4"
-  width="480" &gt;
-  &lt;a href="/files/bunny.mp4"&gt;Click here&lt;/a&gt; to download this video.
-&lt;/video&gt;
-
+<pre>&lt;video height="270" id="player1" src="/files/bunny.mp4" width="480"&gt;
 &lt;script type="text/javascript"&gt;
   $('#player1').jwplayer({
     autostart:true,
     flashplayer:'/files/player.swf',
     mute:true,
-    repeat:true,
-    skin:'/files/icecreamsneaka.xml'
+    skin:'/files/five.xml'
 });
 &lt;/script&gt;</pre>
 
 <p>Third, place this code where you want the second video to appear:</p>
-<pre>&lt;video
-  height="270"
-  id="player2"
-  src="/files/corrie.mp4"
-  width="480" &gt;
-  &lt;a href="/files/corrie.mp4"&gt;Click here&lt;/a&gt; to download this video.
-&lt;/video&gt;
+<pre>&lt;video height="270" id="player2" src="/files/corrie.mp4" width="480"&gt;
 
 &lt;script type="text/javascript"&gt;
   $('#player2').jwplayer({
     duration:45,
+    screencolor:'00bee0',
     skin:'/files/stormtrooper.xml'
 });
 &lt;/script&gt;</pre>
 
 <p>Note that the <i>jwplayer()</i> function is called twice. This allows us to set different options for the two players.</p>
+
 
 
 
