--- a/html5/test/examples/multiple_players.html
+++ b/html5/test/examples/multiple_players.html
@@ -1,53 +1,36 @@
 <html>
 <body>
-
 <h1>Multiple players</h1>
 
-<p>Multiple players on one page. Different videos, but the same styling.</p>
+
+
+<p>Multiple players on one page. Different videos, but the same player options.</p>
 
 <h3>Player 1:</h3>
-<video height="270" id="player1" poster="/jw/upload/bunny.jpg" src="/jw/upload/bunny.mp4" width="480">
-	<a href="/jw/upload/bunny.mp4">Click here</a> to download this video.
-</video>
+<p><video height="270" id="player1" poster="/jw/upload/bunny.jpg" src="/jw/upload/bunny.mp4" width="480"></video></p>
 
 <h3>Player 2:</h3>
-<video height="270" id="player2" poster="/jw/upload/corrie.jpg" src="/jw/upload/corrie.mp4" width="480">
-	<a href="/jw/upload/corrie.mp4">Click here</a> to download this video.
-</video>
+<p><video height="270" id="player2" poster="/jw/upload/corrie.jpg" src="/jw/upload/corrie.mp4" width="480"></video></p>
 
-<script type="text/javascript" src="/jw/js/jquery.jwplayer.js"></script><script type="text/javascript">
+<script type="text/javascript" src="/jw/js/jquery.jwplayer.js"></script>
+<script type="text/javascript">
 	$('video').jwplayer({
 		flashplayer:'/files/player.swf',
 		skin:'/files/skins/five/five.xml'
 	});
-</script></p>
-
-
+</script>
 
 <h3>HTML code</h3>
 <p>Here is the code for this setup. Make sure to change all links to the scripts, player, image and video. They must refer to the correct files on your server.</p>
-
 
 <p>First, place this code in the <ems>&lt;head&gt;</ems> of your page:</p>
 <pre>&lt;script type="text/javascript" src="/scripts/jquery.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript" src="/scripts/jquery.jwplayer.js"&gt;&lt;/script&gt;</pre>
 
 <p>Second, place this code where you want the videos to appear:</p>
-<pre>&lt;video 
-  height="270" 
-  id="player1"
-  src="/files/bunny.mp4"
-  width="480" &gt;
-  &lt;a href="/files/bunny.mp4"&gt;Click here&lt;/a&gt; to download this video.
-&lt;/video&gt;
+<pre>&lt;video height="270" id="player1" src="/files/bunny.mp4" width="480" &gt;
 
-&lt;video 
-  height="270" 
-  id="player2"
-  src="/files/corrie.mp4"
-  width="480" &gt;
-  &lt;a href="/files/corrie.mp4"&gt;Click here&lt;/a&gt; to download this video.
-&lt;/video&gt;
+&lt;video height="270" id="player2" src="/files/corrie.mp4" width="480" &gt;
 
 &lt;script type="text/javascript"&gt;
   $('video').jwplayer({
@@ -57,6 +40,9 @@
 &lt;/script&gt;</pre>
 
 <p>Note that the <i>$('video')</i> part of the script ensures all video tags will be <i>upgraded</i> to a JW Player. It doesn't matter how many players you have on your page.</p>
+
+
+
 
 </body>
 </html>
