removed inline videos
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1023 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/index.html
+++ b/html5/test/index.html
@@ -29,7 +29,7 @@
 			'': {},
 			'MP4 video': {
 				file:'http://content.bitsontherun.com/videos/nPripu9l-327.mp4',
-				flashplayer:'../../fl5/player.swf',
+				flashplayer:'../assets/player.swf',
 				skin:'five',
 				height:240,
 				width:500
@@ -41,8 +41,8 @@
 				width:500
 			},
 			'FLV video': {
-				file:'files/bunny.flv',
-				flashplayer:'../../fl5/player.swf',
+				file:'http://content.bitsontherun.com/videos/nPripu9l-239131.flv',
+				flashplayer:'../assets/player.swf',
 				skin:'five',
 				height:240,
 				width:500
@@ -50,7 +50,7 @@
 			' ': {},
 			'MP4 video with image and screencolor, no flashplayer': {
 				file:'http://content.bitsontherun.com/videos/nPripu9l-327.mp4',
-				image:'http://content.bitsontherun.com/videos/nPripu9l-320.jpg',
+				image:'http://content.bitsontherun.com/thumbs/nPripu9l-320.jpg',
 				skin:'five',
 				screencolor:'cc0000',
 				height:240,
@@ -66,7 +66,7 @@
 				width:500
 			},
 			'Long MP4 video with duration and low volume': {
-				flashplayer:'../../fl5/player.swf',
+				flashplayer:'../assets/player.swf',
 				duration:650,
 				file:'http://content.bitsontherun.com/videos/LJSVMnCF-327.mp4',
 				image:'http://content.bitsontherun.com/thumbs/LJSVMnCF-320.jpg',
