added WebM test and WebM format docs to HTML5 player
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1064 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/mp4_ogg.html
+++ b/html5/test/examples/mp4_ogg.html
@@ -19,7 +19,7 @@
 <p> Here is the code for this setup. Make sure to change all links to the scripts, player, image and video. They must refer to the correct files on your server.</p>
 
 <p>First, place this code in the <ems>&lt;head&gt;</ems> of your page:</p>
-<pre>&lt;script type="text/javascript" src="/scripts/jwplayer.js"&gt;&lt;/script&gt;
+<pre>&lt;script type="text/javascript" src="/scripts/jquery.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript" src="/scripts/jquery.jwplayer.js"&gt;&lt;/script&gt;</pre>
 
 
