--- a/html5/test/index.html
+++ b/html5/test/index.html
@@ -47,6 +47,12 @@
 				height:240,
 				width:500
 			},
+			'WebM video': {
+				file:'/player/testing/files/bunny.webm',
+				skin:'five',
+				height:240,
+				width:500
+			},
 			' ': {},
 			'MP4 video with image and screencolor, no flashplayer': {
 				file:'http://content.bitsontherun.com/videos/nPripu9l-327.mp4',
@@ -414,7 +420,7 @@
 
 
 <div id="preview">
-	<video id="container" width="400" height="200">
+	<video id="container" src="" poster="" width="400" height="200" controls></video>
 </div>
 
 
