Updating extend method
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1169 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/js/bin-debug/index.html
+++ b/js/bin-debug/index.html
@@ -12,16 +12,22 @@
 			function getClass(className){
 				var selected = jwplayer.utils.selectors(className);
 				for (var i = 0; i < selected.length; i++){
-					print(element.innerHTML);
+					print(selected[i].innerHTML);
 				}				
 			}
 			
 			function getId(idName){
-				print(jwplayer.utils.selectors(idName));
+				var selected = jwplayer.utils.selectors(idName);
+				if (selected !== null){
+					print(selected.innerHTML);					
+				}
 			}
 			
 			function getTagAndClass(tagAndClassName){
-				print(jwplayer.utils.selectors(tagAndClassName).innerHTML);
+				var selected = jwplayer.utils.selectors(tagAndClassName);
+				for (var i = 0; i < selected.length; i++){
+					print(selected[i].innerHTML);
+				}
 			}
 			
 			function print(msg){
