Embed testing page
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1182 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/js/bin-debug/embed.html
+++ b/js/bin-debug/embed.html
@@ -3,10 +3,10 @@
 		<script type="text/javascript" src="jwplayer.js"></script>
 		<script type="text/javascript">
 			var options = {
-				file:		'/testing/files/bunny.mp4',
-				image:		'/testing/files/bunny.jpg',
+				file:		'../../../testing/files/bunny.mp4',
+				image:		'../../../testing/files/bunny.jpg',
 				
-				players: [{type:'flash', src: '/trunk/fl5/player.swf'}]
+				players: [{type:'flash', src: '../../../trunk/fl5/player.swf'}]
 			}; 
 			function embedPlayer() {
 				return $jw('div1').setup(options);
