Adding playerReady callback to API
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1183 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/js/bin-debug/embed.html
+++ b/js/bin-debug/embed.html
@@ -19,6 +19,9 @@
 		<div id="div1">
 			This is &lt;div&gt; 1.
 		</div>
+		<script type="text/javascript">
+			embedPlayer();
+		</script>
 
 		<h3>Embed a player</h3>
 		<a href="#" onclick="embedPlayer(); return false;">Click here to embed player</a><br />
